test/conformance/chainsaw/validating-policies/exceptions/compensating-controls/bad-pod-no-ticket.yaml
apiVersion: v1
kind: Pod
metadata:
  name: legacy-app-no-ticket
  annotations:
    security.company.com/network-isolation: strict
spec:
  containers:
  - name: app
    image: public.ecr.aws/docker/library/busybox:latest
