test/conformance/chainsaw/validating-policies/exceptions/compensating-controls/bad-pod-other-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: other-app
spec:
  containers:
  - name: app
    image: public.ecr.aws/docker/library/busybox:latest
