test/conformance/chainsaw/validating-policies/exceptions/compensating-controls/compliant-pod-no-ticket.yaml
apiVersion: v1
kind: Pod
metadata:
  name: legacy-app-compliant-no-ticket
spec:
  containers:
  - name: app
    image: public.ecr.aws/docker/library/busybox:latest
    securityContext:
      runAsNonRoot: true
