test/conformance/chainsaw/validating-policies/exceptions/compensating-controls/good-pod-other-app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: other-app-compliant
spec:
  containers:
  - name: app
    image: public.ecr.aws/docker/library/busybox:latest
    securityContext:
      runAsNonRoot: true
