test/conformance/chainsaw/validating-policies/exceptions/compensating-controls/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: legacy-app-granted
  annotations:
    security.company.com/ticket-id: SEC-1234
    security.company.com/network-isolation: strict
spec:
  containers:
  - name: app
    image: public.ecr.aws/docker/library/busybox:latest
